--- a/weatherApp.html
+++ b/weatherApp.html
@@ -231,7 +231,7 @@ body .center #icon {
         <div class="app">
             <div class="up">
                 <h1 id="h1">weather app</h1>
-                <input type="text" placeholder="Search City"  id="input" onclick="inpu(this.value)">
+                <input type="text" placeholder="Search City"  id="input" onkeyup="inpu(this.value)">
             </div>
             <div class="center">
                 <p id="cityName"> </p>
